--- a/src/app/todo-form/todo-form.component.html
+++ b/src/app/todo-form/todo-form.component.html
@@ -1,5 +1,5 @@
 
-<mat-form-field>
-    <input matInput placeholder="TODO" [(ngModel)]="title" name="todoTitle">
+<mat-form-field style="width: 80%;">
+    <input matInput placeholder="TODOを追加" [(ngModel)]="title" name="todoTitle">
 </mat-form-field>
 <button mat-raised-button (click)="addTodo()">追加</button>
